# Educational_projects_on_Cpp_and_Java

./: .gitignore  README.md  commit.sh
CPP_pool/day00/ex00/: megaphone.cpp
CPP_pool/day00/ex01/: contact.cpp  contact.hpp  main.cpp  phonebook.cpp
CPP_pool/day00/ex02/: 11.txt  Account  Account.cpp
CPP_pool/day01/ex00/: Zombie.hpp  main.cpp  newZombie.cpp
CPP_pool/day01/ex01/: Makefile  Zombie  main.cpp  zombieHorde.cpp
CPP_pool/day01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Weapon.cpp  Weapon.hpp  main.cpp
CPP_pool/day01/ex04/: 1.txt  Makefile
CPP_pool/day01/ex05/: Harl.cpp  Harl.hpp  Makefile  main.cpp
CPP_pool/day01/ex06/: Harl.cpp  Harl.hpp  Makefile  main.cpp
CPP_pool/day02/ex00/: Fixed.cpp  Fixed.hpp
CPP_pool/day02/ex01/: Fixed.hpp
CPP_pool/day02/ex02/: Fixed.hpp
CPP_pool/day02/ex03/: Fixed.hpp  main.cpp
CPP_pool/day03/ex00/: main.cpp
CPP_pool/day03/ex01/: main.cpp
CPP_pool/day03/ex02/: ClapTrap.cpp
CPP_pool/day03/ex03/: ClapTrap.cpp  ClapTrap.hpp  DiamondTrap  DiamondTrap.cpp  DiamondTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp
CPP_pool/day04/ex00/: Animal.cpp  Cat.hpp  Dog.cpp  Makefile  WrongCat.hpp
CPP_pool/day04/ex01/: Animal.hpp  Brain.cpp  Brain.hpp  Dog.hpp  main.cpp
CPP_pool/day04/ex02/: Animal.cpp  Makefile
CPP_pool/day04/ex03/: AMateria.hpp  Character.hpp  Cure.hpp  IMateriaSource.hpp  Makefile  MateriaSource.hpp  main.cpp
CPP_pool/day05/ex00/: Bureaucrat.cpp  Makefile
CPP_pool/day05/ex01/: Bureaucrat.hpp  Form.hpp  main.cpp
CPP_pool/day05/ex02/: Bureaucrat.cpp  PresidentialPardonForm.hpp  ShrubberyCreationForm.hpp
CPP_pool/day05/ex03/: Form.cpp  Intern.cpp  Makefile  RobotomyRequestForm.hpp
CPP_pool/day06/ex01/: Data.cpp
CPP_pool/day06/ex02/: A.hpp  Makefile  main.cpp
CPP_pool/day07/ex00/: Makefile
CPP_pool/day08/ex00/: Makefile  easyfind.hpp
CPP_pool/day08/ex01/: Makefile  Span.cpp  main.cpp
CPP_pool/day08/ex02/: Makefile  main.cpp
CPP_pull/day00/ex00/: Makefile
CPP_pull/day00/ex01/: Makefile  phonebook.hpp
CPP_pull/day00/ex02/: Account.cpp  Account.hpp  Makefile
CPP_pull/day01/ex00/: Makefile  Zombie.cpp  randomChump.cpp
CPP_pull/day01/ex01/: Zombie.cpp  Zombie.hpp  main.cpp  zombieHorde.cpp
CPP_pull/day01/ex02/: Makefile  main.cpp
CPP_pull/day01/ex03/: HumanA.cpp  HumanA.hpp  Makefile  Weapon.hpp
CPP_pull/day01/ex04/: Replace.cpp  Replace.hpp  main.cpp
CPP_pull/day01/ex06/: Harl.hpp
CPP_pull/day02/ex01/: Fixed.cpp
CPP_pull/day02/ex02/: Fixed.cpp  Makefile
CPP_pull/day02/ex03/: Fixed.cpp  Makefile  Point.cpp  Point.hpp
CPP_pull/day03/ex00/: ClapTrap.hpp  Makefile
CPP_pull/day03/ex01/: ClapTrap.cpp  Makefile  ScavTrap.cpp
CPP_pull/day03/ex02/: FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
CPP_pull/day03/ex03/: FragTrap.cpp  main.cpp
CPP_pull/day04/ex00/: Cat.cpp  Dog.hpp  WrongAnimal.cpp  WrongAnimal.hpp  WrongCat.cpp  main.cpp
CPP_pull/day04/ex01/: Cat.hpp  Dog.cpp
CPP_pull/day04/ex02/: Animal.hpp  Cat.cpp  main.cpp
CPP_pull/day04/ex03/: AMateria.cpp  Character.cpp  Cure.cpp  ICharacter.hpp  Ice.cpp  Ice.hpp  MateriaSource.cpp
CPP_pull/day05/ex00/: Bureaucrat.cpp  Bureaucrat.hpp  Makefile  main.cpp
CPP_pull/day05/ex01/: Bureaucrat.cpp  Bureaucrat.hpp  Form.cpp
CPP_pull/day05/ex02/: Bureaucrat.cpp  Form.cpp  Form.hpp  Makefile  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
CPP_pull/day05/ex03/: AppleTree_shrubbery.txt  Intern.hpp  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.cpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
CPP_pull/day06/ex00/: Converse  Conversion.cpp  Conversion.hpp  Makefile  main.cpp
CPP_pull/day06/ex01/: Data.hpp  Makefile  Reinterpret  main.cpp
CPP_pull/day06/ex02/: B.hpp  Base.hpp  C.hpp  main.cpp
CPP_pull/day07/ex00/: main.cpp  whatever.hpp
Java_pool/Day01/: Readme.md  en.subject (1)\en.subject ().md
Java_pool/Day05/: pom.xml
Java_pool/Rush01/: pom.xml
LippgardtCo/: README.md
LippgardtCo/t00/: Makefile  Manipulator.cpp  Manipulator.hpp  Point.cpp  main.cpp
LippgardtCo/t01/: Makefile  Manipulator.cpp  Manipulator.hpp  Point.cpp  Point.hpp  main.cpp
LippgardtCo/t02/: Makefile  OK.gcode  Point.cpp  Point.hpp  PointArray.cpp  PointArray.hpp  main.cpp  notOK.gcode
ROS_pool/Day00/: README.md
ROS_pool/Day01/ex00/service_full_name/: CMakeLists.txt
ROS_pool/Day01/ex00/service_full_name/msg/: full_name_message.msg
ROS_pool/Day01/ex00/service_full_name/src/: name_server.cpp
ROS_pool/Day01/ex00/service_full_name/srv/: summ_full_name.srv
ROS_pool/Day04/: README.md
ROS_pool/Day07/: README.md
ROS_pool/Day08/ex00/opencv_togray/: CMakeLists.txt
ROS_pool/Day08/ex00/opencv_togray/src/: image_publisher.cpp
ROS_pool/Day08/ex03/opencvid/: CMakeLists.txt  package.xml
ROS_pool/ROS_pull/Day00/ex10/archibald/: CMakeLists.txt
ROS_pool/Team00-01/: README-2.md  README.md
ROS_pull/ROS_pull/Day01/ex01/action_turtle_commands/: CMakeLists.txt
ROS_pull/ROS_pull/Day02/ex02/learning_tf2/: CMakeLists.txt
ROS_pull/ROS_pull/Day02/ex02/learning_tf2/launch/: start_demo.launch
ROS_pull/ROS_pull/Day02/ex02/learning_tf2/src/: turtle_tf2_broadcaster.cpp
ROS_pull/ROS_pull/Day03/ex00/my_robot_urdf/: CMakeLists.txt
ROS_pull/ROS_pull/Day04/ex00/my_robot_urdf/: CMakeLists.txt
ROS_pull/ROS_pull/Day04/ex00/my_robot_urdf/urdf/: robot.urdf.xacro
ROS_pull/ROS_pull/Day04/ex04/my_robot_urdf/: CMakeLists.txt
ROS_pull/ROS_pull/Day04/ex04/my_robot_urdf/launch/: robot_depth_camera.launch
ROS_pull/ROS_pull/Day04/ex04/my_robot_urdf/src/: distance_regulator.cpp
ROS_pull/ROS_pull/Day04/ex04/my_robot_urdf/urdf/: robot.gazebo.xacro
ROS_pull/ROS_pull/Day09/ex02/meta_map_robot/bt/: CMakeLists.txt
ROS_pull/ROS_pull/Day09/ex02/meta_map_robot/bt/src/: Charger.h  Publisher.h  Scriber.h  patrol_bot.h
Ya/Contest/: 01.cpp  02.cpp  04.cpp  04_stupid.cpp  test.cpp
Ya/Day1/: 01.cpp  02.cpp  03.cpp
(+423 files in other folders)
